<resources>
    <string name="app_name">Login-App</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_sign_in">already_have_account_sign_in</string>
    <string name="login">Login</string>
    <string name="btnlogin">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t_have_account_sign_Up</string>
    <string name="loginBtn">Login</string>
    <string name="hello">Hello</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_icon">img\n</string>
    <string name="i_am_logged_in">I am logged in</string>
    <string name="sign_out">Sign Out</string>
    <string name="googleSignInClient">id</string>
</resources>